# recyclable

./: .env.example  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .wt.conf  Dockerfile  README.md  adversarial-reviewer.aligned.md  devcontainer.json  docker-compose.override.yaml.example  docker-compose.yaml  docker-compose.yml  refactorer.aligned.md  setup.sh
.claude/: CLAUDE.md  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.all.json  pyrightconfig.strict.json
backend/app/: config.py  main.py
backend/app/cli/: __main__.py  _seed_parse.py  seed.py  verify.py
backend/app/domain/: __init__.py  exceptions.py  quote_normalize.py
backend/app/domain/models/: __init__.py  answer_trace.py  jurisdiction.py  material.py  material_alias.py  regression_case.py  rule.py  source_document.py
backend/app/infra/db/: session.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_data_spine.py  0002_answer_audit_record_columns.py  0003_conditions_column.py  0004_pg_trgm_index.py
backend/seeds/denver-easy/: jurisdiction.yaml  materials.yaml  regression_cases.yaml  rules.yaml  source_documents.yaml
backend/seeds/test-fixture/: jurisdiction.yaml  materials.yaml  regression_cases.yaml  rules.yaml  source_documents.yaml
backend/seeds/verify-fixture/: jurisdiction.yaml  materials.yaml  regression_cases.yaml  rules.yaml  source_documents.yaml
backend/src/: __init__.py  config.py  main.py
backend/src/api/: deps.py  export_openapi.py
backend/src/api/routes/: ask.py  pages.py
backend/src/api/schemas/: answer.py  jurisdiction_page.py
backend/src/application/: answer_query.py  answer_query_command.py  get_jurisdiction_page.py  get_material_page.py
backend/src/application/mappers/: domain_to_wire.py  wire_to_domain.py
backend/src/cli/: __init__.py  __main__.py  _seed_parse.py  seed.py  verify.py
backend/src/cli/seed_schemas/: __init__.py  jurisdiction.py  material.py  material_alias.py  regression_case.py  rule.py  source_document.py
backend/src/domain/: exceptions.py  quote_normalize.py
backend/src/domain/audit/: __init__.py  answer_audit_record.py  answer_audit_record_repo.py  answer_audit_record_validator.py  regression_case.py
backend/src/domain/knowledge_base/: __init__.py  jurisdiction.py  jurisdiction_repo.py  material.py  material_normalizer.py  material_repo.py  normalization_result.py  rule.py  rule_repo.py  source.py  source_repo.py
backend/src/domain/models/: __init__.py  jurisdiction.py  material_alias.py  regression_case.py  rule.py  source_document.py
backend/tests/: conftest.py
backend/tests/_fakes/: answer_audit_record_repo.py  anthropic_client.py  jurisdiction_repo.py  material_alias_search.py  material_repo.py  rule_repo.py  source_repo.py
backend/tests/api/: test_ask_route.py  test_boot_check.py
backend/tests/application/: test_answer_query.py  test_get_jurisdiction_page.py  test_get_material_page.py
backend/tests/cli/: conftest.py  test_seed_atomic.py  test_seed_idempotent.py  test_seed_quote_integrity.py  test_seed_schema_mismatch.py  test_verify_exit_codes.py
backend/tests/domain/: test_models_load.py  test_quote_normalize.py
backend/tests/infra/: test_answer_audit_record_orm.py  test_answer_audit_record_repo.py  test_anthropic_client_classify_prompt.py  test_anthropic_client_model_ids.py  test_anthropic_client_response_parsing.py  test_anthropic_client_tool_registry.py  test_db_engine_lock_timeout.py  test_rule_repo_find_for.py
backend/tests/migrations/: conftest.py  test_data_spine_constraints.py  test_data_spine_roundtrip.py  test_pg_trgm_index.py
backend/tests/regression/: conftest.py  test_ask_offline.py  test_smoke_eval.py
(+231 files in other folders)
