[project]
name = "recyclable-backend"
version = "0.1.0"
description = "Recycling Law Assistant -- research worker"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-dotenv>=1.0,<2.0",
    "anthropic>=0.102.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-postgresql>=6.0,<7.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require a live Postgres connection",
]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "types-pyyaml>=6.0.12.20260408",
]
