[project]
name = "recyclable-backend"
version = "0.1.0"
description = "Recycling Law Assistant -- research worker"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-dotenv>=1.0,<2.0",
    "anthropic>=0.102.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-postgresql>=6.0,<7.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require a live Postgres connection",
]

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]
# B008: FastAPI's canonical DI pattern uses Depends() in default args.
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.basedpyright]
# Root + tests + migrations are all part of the analysis surface.
include = ["src", "tests", "migrations"]
# pytest sets pythonpath=["."] so `import src.*` resolves from the backend/
# root. Mirror that here so basedpyright sees the same import graph.
extraPaths = ["."]
# FastAPI's canonical DI pattern uses Depends(), Query(), Header(), etc.
# in parameter default expressions; this is unavoidable and idiomatic.
reportCallInDefaultInitializer = "none"
[[tool.basedpyright.executionEnvironments]]
# Tests legitimately reach into private/protected internals to verify
# behavior (e.g. repo._store, _check_boot_config), and pytest assertion
# helpers / discarded results make reportUnusedCallResult near-pure
# noise here. Scope both relaxations to tests/** only; src/** keeps
# reportPrivateUsage AND reportUnusedCallResult enabled so a dropped
# domain-finder result in src/ still fails the checker.
root = "tests"
reportPrivateUsage = "none"
reportUnusedCallResult = "none"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "types-pyyaml>=6.0.12.20260408",
]
